# xsectional-ranker

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MASTER_BLUEPRINT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: costs.yaml  default.yaml  integrity_reference.yaml  sectors.yaml
config/universe/: survivor_cache.yaml
docs/: END_GOAL_AND_ROADMAP.md  FROZEN_PILOT_SPEC.md  MURDER_BOARD.md  PREREGISTRATION_CANDIDATE_2_VOLUME_DELTA.md  PREREGISTRATION_CANDIDATE_3_SECTOR_RELATIVE.md  PREREGISTRATION_GAP_ABSTENTION_STUDY.md  PREREGISTRATION_VOLUME_DELTA_RESIDUAL.md  PROGRESS.md  RESEARCH_FINDINGS.md
docs/deep_dives/: 01_DeepDive_Data_and_Universe_Layer.md  02_DeepDive_Execution_and_Null_Layer.md  03_DeepDive_Harness_Import_and_Verification.md  04_DeepDive_Validation_and_Gate_Layer.md
ledger/: MANIFEST.yaml  README.md  cand1__A-Z__15.json  cand1__A-Z__30.json  cand1__A-Z__45.json  cand1__A__15.json  cand1__A__30.json  cand1__A__45.json  cand2r__V_resid__15.json  cand2r__V_resid__30.json  cand2r__V_resid__45.json  cand3__SR-Z__15.json  cand3__SR-Z__30.json  cand3__SR-Z__45.json  cand3__SR__15.json  cand3__SR__30.json  cand3__SR__45.json
scripts/: __init__.py  candidate3_screen.py  check_freeze_boundary.py  check_vendored_hashes.py  d8_independence.py  generate_goldens.py  regenerate_ledger.py  run_candidate3_verdict.py  run_gap_abstention_study.py  run_vresid_verdict.py
src/xsranker/: __init__.py
src/xsranker/backtest/: __init__.py  diagnostics.py  harness.py  independence_screen.py  pnl.py  report.py  universe_panel.py
src/xsranker/core/: __init__.py  config.py  constants.py  logging.py  types.py
src/xsranker/data/: __init__.py  calendar.py  config.py  factory.py  integrity.py  repository.py
src/xsranker/data/brokers/: __init__.py  base.py  parquet_cache.py
src/xsranker/data/hygiene/: __init__.py  bad_ticks.py  corp_actions.py  gaps.py  liquidity.py
src/xsranker/data/universe/: __init__.py  circuit.py  eligibility.py  point_in_time.py  sector_map.py
src/xsranker/execution/: __init__.py  book.py  config.py  cost.py  pipeline.py  sector_cap.py  sizing.py  spread.py  truncation.py
src/xsranker/features/: __init__.py  dual_path.py  point_in_time.py
src/xsranker/gate/: __init__.py  arm.py  benchmark.py  config.py  diagnostics.py  program.py  verdict.py
src/xsranker/harness/: __init__.py  adapter.py
src/xsranker/ledger/: __init__.py  config.py  persistence.py
src/xsranker/null/: __init__.py  panel.py
src/xsranker/signals/: __init__.py  ranker.py  sector_relative.py  spec.py  volume_delta.py
tests/: conftest.py  test_backtest_harness.py  test_backtest_pnl.py  test_core_config.py  test_core_logging.py  test_data_broker_cache.py  test_data_calendar.py  test_data_circuit.py  test_data_corp_actions.py  test_data_eligibility.py  test_data_hygiene.py  test_data_repository.py  test_data_types.py  test_data_universe.py  test_execution_cost.py  test_execution_pipeline.py  test_execution_sector_cap.py  test_execution_sizing.py  test_execution_spread.py  test_execution_truncation.py  test_features_pnl_primitives.py  test_features_prefix_invariance.py  test_features_train_serve_skew.py  test_gate_arm.py  test_gate_benchmark.py  test_gate_config.py  test_gate_diagnostics.py  test_gate_literal_n_guard.py  test_gate_program.py  test_gate_verdict.py  test_gate_zero.py  test_golden_master.py  test_ledger_persistence.py  test_machinery_removal.py  test_null_panel.py  test_ohlcv_bridge.py  test_signals_prefix_invariance.py  test_signals_sector_relative.py  test_signals_volume_delta.py  test_vendored_freeze.py
tests/golden/: cpcv_path_distribution.json  dsr_known_effective_n.json  effective_n_correlated_group.json  feature_atr.json  feature_cross_sectional_rank.json  feature_gap.json  monte_carlo_sign_flip_seeded.json  pbo_cscv.json  round_trip_cost.json
tests/vendored_unit/: test_cpcv_pbo.py  test_ledger.py  test_metrics.py  test_robustness.py  test_validation_core.py
